Got some of the scaffolding in place
