# packages/server/src/controller.ts
@@ -1,10 +1,25 @@
-import type { AverageDamageResult, CompareRequest, CompareResponse } from 'models/schema'
+import type {
+  AverageDamageResult,
+  CompareRequest,
+  CompareResponse,
+  ModifiersRequest,
+  ModifiersResponse,
+} from 'models/schema'
 import { Unit } from './models/unit'
 import AverageDamageProcessor from 'processors/averageDamageProcessor'
 import { SAVES } from 'common'
 import { Target } from 'models/target'
+import { ModifierLookup } from 'models/modifiers'
+import { TargetModifierLookup } from 'models/targetModifiers'
 
 export default class AosController {
+  public getModifiers({}: ModifiersRequest): ModifiersResponse {
+    return {
+      modifiers: ModifierLookup.availableModifiers.map(mod => mod.metadata),
+      target_modifiers: TargetModifierLookup.availableModifiers.map(mod => mod.metadata),
+    }
+  }
+
   public compareUnits({ units: data }: CompareRequest): CompareResponse {
     const units = data.map(d => new Unit(d))
     const targets = SAVES.map(save => new Target({ save }))
