# packages/server/src/models/schema.ts
@@ -1,5 +1,19 @@
 import type { UnitParams } from './unit'
 
+export interface ModifiersRequest {}
+
+export interface ModifierDefinition {
+  id: string
+  name: string
+  description: string
+  options: object
+}
+
+export interface ModifiersResponse {
+  modifiers: ModifierDefinition[]
+  target_modifiers: ModifierDefinition[]
+}
+
 export interface CompareRequest {
   units: UnitParams[]
 }
